templates/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database1
  labels:
    app: database1
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: database1
